--- a/TODO
+++ b/TODO
@@ -2,29 +2,14 @@
 
 == Todo ==
 - use a steady ID for books = db.prefix(20)
+  init page: if deep link -> open the database linked
+- do not re-add existing book, just open it
+- better background handler
+  restore mobile connection
+  power down webrtc and websocket after a few minutes background
+    not for the server app though
+- duplication feature
 - better loading screen before js ready
-- handle init page
-    [done] if share link
-      add database
-      list page
-    else if deep link
-      if page exists in default database -> can we include local/global db in URL?
-        go to deep link
-      else
-        book page
-    [done] else if default database exists
-      list page
-    [done] else
-      book page
-- diff
-  document changed during edit
-  how do we implement diff
-    on popstate
-    if there is a diffable change (removal)
-    navigate to diff
-    diff back => no save, keep draft
-    diff save => overwrite
-    diff discard => delete draft
 - verify URL handling works with new page
 - deduplicate render calls for remote changes
   eg once a second
